--- a/Profile Card/index.html
+++ b/Profile Card/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<htm lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="index.css">
 
     <!-- BOXICON  -->
-    <link rel="stylesheet" href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
     <div class="profile-card">
@@ -23,9 +23,29 @@
             <h2>Web-Devoloper</h2>
         </div>
         <div class="click">
-            <div class="follow"><a href="https://www.instagram.com/pradhyumnya_patil"><span>Follow</span></a></div>
-            <div class="message"><a href="mailto:pradhunyagawande@gmail.com"><span>Message</span></a></div>
+            <div class="follow"><a target="_blank" href="https://www.instagram.com/pradhyumnya_patil" class="b" ><span>Follow</span></a></div>
+            <div class="message"><a target="_blank" href="mailto:pradhunyagawande@gmail.com" class="b"><span>Message</span></a></div>
+            <hr>
+        </div>
+        <div class="reach">
+            <p>
+                Reach Me
+            </p>
+        </div>
+        <div class="icons">
+            <a href="#" style="color: blue;" class="link">
+                <i class='bx bxl-facebook'></i>
+            </a>
+            <a href="#" style="color: red;" class="link">
+                <i class='bx bxl-youtube'></i>
+            </a>
+            <a href="#" style="color: red;" class="link">
+                <i class='bx bxl-instagram'></i>
+            </a>
+            <a href="#" style="color: red;" class="link">
+                <i class='bx bxl-twitter' style='color:#000000' ></i>
+            </a>
         </div>
     </div>
 </body>
-</html>
+</htm>
