--- a/Profile Card/index.html
+++ b/Profile Card/index.html
@@ -36,10 +36,10 @@
             <a href="#" style="color: blue;" class="link">
                 <i class='bx bxl-facebook'></i>
             </a>
-            <a href="#" style="color: red;" class="link">
+            <a href="https://youtube.com/@_CodeCraftedMind?si=3Ox8gSG-gD71LirY" target="_blank" style="color: red;" class="link">
                 <i class='bx bxl-youtube'></i>
             </a>
-            <a href="#" style="color: red;" class="link">
+            <a href="https://www.instagram.com/pradhyumnya_patil" target="_blank" style="color: red;" class="link">
                 <i class='bx bxl-instagram'></i>
             </a>
             <a href="#" style="color: red;" class="link">
