--- a/Profile Card/index.html
+++ b/Profile Card/index.html
@@ -20,7 +20,7 @@
             <h1>Pradhumnya Gawande</h1>
         </div>
         <div class="pesha">
-            <h2>Web-Devoloper</h2>
+            <h2>Web-Developer</h2>
         </div>
         <div class="click">
             <div class="follow"><a target="_blank" href="https://www.instagram.com/pradhyumnya_patil" class="b" ><span>Follow</span></a></div>
