--- a/Profile Card/index.html
+++ b/Profile Card/index.html
@@ -12,19 +12,20 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
+   <div class="wrapper">
     <div class="profile-card">
         <div class="image">
-            <img src="IMG-20240410-WA0004.jpg" alt="Me" class="profile">
+            <img src="jimmy.jpg" alt="Me" class="profile">
         </div>
         <div class="name">
-            <h1>Pradhumnya Gawande</h1>
+            <h1>Akshay Gangasagar</h1>
         </div>
         <div class="pesha">
             <h2>Web-Developer</h2>
         </div>
         <div class="click">
-            <div class="follow"><a target="_blank" href="https://www.instagram.com/pradhyumnya_patil" class="b" ><span>Follow</span></a></div>
-            <div class="message"><a target="_blank" href="mailto:pradhunyagawande@gmail.com" class="b"><span>Message</span></a></div>
+            <div class="follow"><a target="_blank" href="https://www.instagram.com/its_gangasagar05/" class="b" ><span>Follow</span></a></div>
+            <div class="message"><a target="_blank" href="mailto:akshaygangasagar91@gmail.com" class="b"><span>Message</span></a></div>
             <hr>
         </div>
         <div class="reach">
@@ -36,10 +37,10 @@
             <a href="#" style="color: blue;" class="link">
                 <i class='bx bxl-facebook'></i>
             </a>
-            <a href="https://youtube.com/@_CodeCraftedMind?si=3Ox8gSG-gD71LirY" target="_blank" style="color: red;" class="link">
+            <a href="#" target="_blank" style="color: red;" class="link">
                 <i class='bx bxl-youtube'></i>
             </a>
-            <a href="https://www.instagram.com/pradhyumnya_patil" target="_blank" style="color: red;" class="link">
+            <a href="https://www.instagram.com/its_gangasagar05/" target="_blank" style="color: red;" class="link">
                 <i class='bx bxl-instagram'></i>
             </a>
             <a href="#" style="color: red;" class="link">
@@ -47,5 +48,6 @@
             </a>
         </div>
     </div>
+   </div>
 </body>
 </htm>
